descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2010-12-XX  Release 7.18.2                                     ---
----------------------------------------------------------------------


----------------------------------------------------------------------
--- 2010-12-07  Release 7.18.0                                     ---
----------------------------------------------------------------------

This release includes the initial release of a new Bag of Triangle
(BoT) editing interface for MGED and Archer.  Nicholas Reed developed
the new graphical user interface (GUI) in order to consolidate the
numerous BoT editing commands and processing steps into one unified
easy-to-use interface.  The new GUI grealy simplifies BoT processing
steps and can save modelers considerable time.

* ported benchmark suite to Windows (requires 'sh') - Erik Greenwald
* improved NURBS wireframes with interior surface lines - Keith Bowman
* additional NURBS raytracing robustness improvements - Keith Bowman
* removed pl-sgi plot tool - Sean Morrison
* expanded rtarea documentation with examples and detail - Cliff Yapp
* improved support for unlimited object counts in mged - Sean Morrison
* fixed 'erase_all' behavior so 'who' gives correct lists - Bob Parker
* fixed idents, solids, and regions output - Bob Parker
* increased performance of facetization and export - Sean Morrison
* fixed NURBS raytrace bug grazing nearly flat surfaces - Keith Bowman
* fixed infinite loop bug converting to NMG and BoT - Sean Morrison
* improved Windows installer desktop shortcut creation - Bob Parker
* fixed running mged external tools (e.g., rt) after 'cd' - Bob Parker
* fixed 'pnts' point cloud primitive memory access bug - Richard Weiss
* new BoT editing interface for mged and archer - Nicholas Reed
* fixed crash during BoT decimation - Nicholas Reed